# cmdr

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark-results.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
Formula/: cmdr.rb
cmdr-cli/: Cargo.toml  build.rs
cmdr-cli/src/: main.rs
cmdr-core/: Cargo.toml
cmdr-core/src/: lib.rs
crates/cmdr-cli/: Cargo.toml
crates/cmdr-cli/src/: main.rs
crates/cmdr-config/: Cargo.toml
crates/cmdr-config/src/: lib.rs
crates/cmdr-core/: Cargo.toml
crates/cmdr-core/src/: lib.rs
crates/cmdr-core/src/inference/: engine.rs  mod.rs
crates/cmdr-core/src/shell/: executor.rs  mod.rs  parser.rs
crates/cmdr-core/src/translation/: engine.rs  mod.rs  prompt.rs
crates/cmdr-plugin/: Cargo.toml
crates/cmdr-plugin/src/: lib.rs
crates/llm/: Cargo.toml  build.rs
crates/llm/src/: bindings.rs  lib.rs
crates/llm/src/install/: README.md  mod.rs  model.rs  ollama.rs  system.rs
crates/llm/tests/: install.rs
docs/: README.md  architecture.md  homebrew-setup.md  inference-backend.md
examples/: basic-usage.rs
scripts/: README.md  run_tests.sh  setup-git-hooks.sh  setup_homebrew_tap.sh
scripts/git-hooks/: pre-commit  pre-commit-auto-format
scripts/test/: build_verification.sh  cli_interface.sh  file_descriptors.sh  repl_behavior.sh
tools/: README.md
tools/benchmark/: Cargo.toml  benchmark.rs
tools/benchmark/src/: benchmark.rs  lib.rs  main.rs
tools/ci/: build.sh  deploy.sh  release.sh  test-coverage.sh
tools/fuzz/: Cargo.toml  fuzzer.rs
tools/fuzz/src/: main.rs
