[package]
name = "cmdr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI binary for cmdr - natural language to shell command translation"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cmdr"
path = "src/main.rs"

[dependencies]
cmdr-core = { path = "../cmdr-core" }
clap = { version = "4.5.40", default-features = false, features = ["derive", "std"] }

[dev-dependencies]
# Test dependencies will be added here 