[package]
name = "cmdr-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration management for cmdr"
keywords = ["config", "configuration", "settings"]
categories = ["configuration"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
num_cpus = "1.0" 