[package]
name = "cmdr-benchmark"
version = "0.1.0"
edition = "2021"
authors = ["cmdr contributors"]
description = "Performance benchmarking tool for cmdr"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
cmdr-core = { path = "../../crates/cmdr-core" }
tokio = { version = "1.0", features = ["full"] } 