[package]
name = "cmdr-fuzz"
version = "0.1.0"
edition = "2021"
authors = ["cmdr contributors"]
description = "Fuzzing tool for cmdr"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
cmdr-core = { path = "../../crates/cmdr-core" }

[[bin]]
name = "cmdr-fuzz"
path = "src/main.rs" 